# AI-Videcoding

./: README.md  pyproject.toml
data/: sample.json
src/metal_prices/: __init__.py  cli.py  fetcher.py
